# testbed

./: .travis.yml  Mono  info.md  pastes.txt  shoo.txt  stack.yaml  tags  testbed.cabal
app/: Main.hi  Main.hs
src/: Bleh.hs  Bloo.hs  C.hs  Chess.hs  Comonadic.hs  Compose.hs  ComposeTH.hs  Cont.hs  Cookie.hs  Cube.hs  D.hs  DEO.hs  Datakind.hs  Do.hs  Feg.dump-simpl  Feg.hi  Feg.hs  Finger.hs  GhcSort.hs  Lib.hs  Mono.hs  MonoTH.hs  Neh.hs  PP.hs  RankLang.hs  RankNChurchEncoding.hs  TastyTest.hi  TastyTest.hs  Test.hs  TriangleGame.hs  Utility.hs  What.hs  bloogle.hi  bloogle.hs  do.hs  numtowords.hs  stat.txt  stat2.txt
src/Bed/: Bleh.hs  Bloo.hs  Chess.hs  Comonadic.hs  Cont.hs  Cookie.hs  Cube.hs  DEO.hs  Datakind.hs  Do.hs  Feg.hs  Finger.hs  GhcSort.hs  Neh.hs  PP.hs  RankLang.hs  RankNChurchEncoding.hs  TastyTest.hs  TriangleGame.hs  What.hs
src/Bed/CD/: C.hs  D.hs
src/Bed/Compose/: Compose.hs  ComposeTH.hs
src/Bed/Core/: Core.hs  clean.sh
src/Bed/Mono/: Mono.hs  MonoTH.hs
test/: Spec.hs  TWeight.hs
