name:                testbed
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/testbed#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Test, Feg, Do, Finger, Bleh, Datakind, Chess
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , extra
                     , gloss
                     , JuicyPixels
                     , parsec
                     , semigroups
                     , mtl
                     , QuickCheck
                     , haskell-src
                     , GenericPretty
                     , containers
                     , xml-conduit
                     , text
                     , resourcet
                     , conduit
                     , xml-types
                     , grid
                     , vector
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , syb
                     , aeson
                     , transformers
                     , hspec
                     , ansi-terminal
  default-language:    Haskell2010

executable testbed-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , testbed
  default-language:    Haskell2010

test-suite testbed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , testbed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/testbed
